src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-dwP0.25-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\ndefault column width: P0.25\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1248 × 688, bounds: 1248 × 688, states: []
size: 1248 × 688, bounds: 1248 × 688, states: [Activated]
